@@ -2,6 +2,17 @@ StarSpan ChangeLog
 $Id$
 
 
+2008-07-24 (1.2.03) 
+    - Fix of bug [200376] Projections do not match under GDAL 1.4:
+      Flag --validate_inputs added.
+      By default, starspan will not prevalidate the various input elements for
+      consistent projection info. This flag enables this check.
+      (Environment variable STARSPAN_NO_VALIDATE_INPUTS no longer used).
+      
+      MinGW build successful using 1.5.2.
+      See http://starspan.casil.ucdavis.edu/doku/doku.php?id=mingw
+      
+    
 2008-07-19
     - some fixes with new naming mechanism with suffixes.
     - Using new version of GuiE that fully shows the output of
